# Naql-ai-Core-

./: .gitignore  ARCHITECTURE.md  check_positions.py  check_trucks.py  check_users.py  mqtt_config.yaml  nats_mqtt.conf  sitecustomize.py  test_graphql.py  test_shipment.py  test_shipment_only.py  test_truck.py  test_user.py  tnc_6543.json
.devin/: wiki.json
.local/skills/artifacts/: .fingerprint
.local/skills/deployment/: .fingerprint
.local/skills/expo/: .fingerprint
.local/skills/mockup-extract/: .fingerprint
.local/skills/mockup-graduate/: .fingerprint
.local/skills/mockup-sandbox/: .fingerprint
.local/skills/react-vite/: .fingerprint
.local/skills/remove-image-background/: .fingerprint
attached_assets/: Pasted-The-Hybrid-Master-Prompt-Naql-ai-Production-Drive-Role-_1776206676691.txt
docs/: EXECUTION_PLAN.md  PROJECT_STRUCTURE.json  SYSTEM_MEMORY.md
docs/architecture/: api_contracts.md  system_design.md
frontend/: .env.example  next.config.js  next.config.ts  package-lock.json  package.json
gateway/: .env.example  pyproject.toml
gateway/app/: main.py
gateway/app/graphql/: schema.py
gateway/app/services/: __init__.py
infra/docker/: Dockerfile.gateway  Dockerfile.service
migrations/cockroachdb/: 001_initial_schema.sql
migrations/timescaledb/: 001_initial_schema.sql
scripts/: asyncpg_debug.py  asyncpg_smoke.py  db_smoke.py  init_db.py  mega_simulator.py  naql_manager.py  simulate_trip.py  simulate_truck_mqtt.py  start_fleet.sh  start_gateway.sh  start_identity.sh
services/agent-orchestrator/: .env.example  pyproject.toml  start.py
services/agent-orchestrator/app/: __init__.py  main.py
services/agent-orchestrator/app/agents/: naql_brain.py  route_optimizer.py
services/agent-orchestrator/app/api/: routes.py
services/agent-orchestrator/app/core/: config.py
services/agent-orchestrator/app/logic/: graph.py
services/agent-orchestrator/app/memory/: vector_store.py
services/agent-orchestrator/app/tools/: service_tools.py
services/fintrack-service/: .env.example  pyproject.toml  start.py
services/fleet-service/: .env.example  pyproject.toml  start.py
services/fleet-service/app/: __init__.py  grpc_server.py  main.py
services/fleet-service/app/api/: routes.py
services/fleet-service/app/core/: config.py
services/fleet-service/app/models/: truck.py
services/fleet-service/app/repositories/: __init__.py
services/fleet-service/app/schemas/: truck.py
services/identity-service/: .env.example  grpc_start.py  pyproject.toml  start.py
services/matching-engine/: .env.example  pyproject.toml  start.py
services/matching-engine/app/: __init__.py  grpc_client.py  grpc_fintrack_client.py  grpc_identity_client.py  main.py  pricing.py
services/matching-engine/app/api/: routes.py
services/matching-engine/app/core/: config.py
services/matching-engine/app/engine/: matcher.py
services/matching-engine/app/schemas/: matching.py
services/telemetry-ingress/: .env.example  pyproject.toml  start.py
services/telemetry-ingress/app/: __init__.py  main.py
services/telemetry-ingress/app/core/: config.py
services/telemetry-ingress/app/processing/: db_writer.py  processor.py
shared/: pyproject.toml
shared/naql/v1/: services_pb2.py  services_pb2_grpc.py
shared/naql_common/: __init__.py  events.py
shared/naql_common/auth/: __init__.py
shared/naql_common/db/: __init__.py  base.py  deps.py
shared/naql_common/db/models/: __init__.py  fintrack.py  fleet.py  identity.py  notification.py  shipment.py  telemetry.py
shared/naql_common/events/: __init__.py
shared/naql_common/geo/: __init__.py
shared/naql_common/utils/: __init__.py
tests/integration/: test_full_cycle.py
(+48 files in other folders)
