[project]
name = "naql-agent-orchestrator"
version = "0.1.0"
description = "AI Agent Orchestrator for Naql.ai — LangGraph-powered system brain"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "grpcio>=1.62,<2",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "langgraph>=0.2,<1",
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.2,<1",
    "ortools>=9.9,<10",
    "pinecone-client>=3.1,<4",
    "httpx>=0.27,<1",
    "nats-py>=2.0,<3",
    "naql-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "ruff>=0.3,<1",
    "mypy>=1.9,<2",
]
